--- a/sagar-boxes.sty
+++ b/sagar-boxes.sty
@@ -197,7 +197,7 @@
 % -----------------------------------------------------------
 % Solution Box
 % -----------------------------------------------------------
-\newtcolorbox{solutionbox}[1][]{
+\newtcolorbox{Mysolutionbox}[1][]{
     enhanced,
     colback=secondarygreen!5,
     colframe=secondarygreen!70!black,
@@ -264,3 +264,4 @@
 % End of sagar-boxes.sty
 % -----------------------------------------------------------
 \endinput
+
