Fix: Add setspace package to sagar-exam-core.sty

--- a/sagar-exam-core.sty
+++ b/sagar-exam-core.sty
@@ -2,16 +2,15 @@
 % Common exam layout, geometry, and tcolorbox setup
 % for Sagar's ICSE/ISC exams and class tests
 % Copyright (c) 2025 Sagar Tamhankar
-% MIT License — see LICENSE file in repository
+% MIT License – see LICENSE file in repository
 % Repository: https://github.com/sagart23/latex-styles-sagar.git
 % --------------------------------------------------
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{sagar-exam-core}[2025/11/23 v1.0 Sagar exam core style]
+\ProvidesPackage{sagar-exam-core}[2025/11/23 v1.1 Sagar exam core style]
 
 % --------------------------------------------------
 % Core encoding & fonts
-% (You can still add other fonts in your document if needed)
 % --------------------------------------------------
 \RequirePackage[T1]{fontenc}
 \RequirePackage{lmodern}
@@ -27,6 +26,11 @@
 \UseMicrotypeSet[protrusion]{basicmath}
 
 % --------------------------------------------------
+% Spacing package (for \doublespacing, \onehalfspacing)
+% --------------------------------------------------
+\RequirePackage{setspace}
+
+% --------------------------------------------------
 % Exam-specific geometry
 % --------------------------------------------------
 \RequirePackage[
@@ -40,161 +44,35 @@
 ]{geometry}
 
 % --------------------------------------------------
-% Colors and tcolorbox environments
+% FIXED: Now properly loads tcolorbox
+% (Colors are inherited from sagar-boxes.sty)
 % --------------------------------------------------
-\RequirePackage[table]{xcolor}
-
-% Core palette (same as sagar-boxes, but safe to redefine)
-\definecolor{primaryblue}{RGB}{0,102,153}
-\definecolor{secondarygreen}{RGB}{51,153,102}
-\definecolor{accentorange}{RGB}{255,153,51}
-\definecolor{warningred}{RGB}{204,51,51}
-\definecolor{backgroundgray}{RGB}{248,249,250}
-
-% Extra colors used here only
-\definecolor{examblue}{RGB}{0,70,140}
-\definecolor{headerblue}{RGB}{0,90,160}
-
 \RequirePackage[most,breakable]{tcolorbox}
-\tcbuselibrary{skins,raster,theorems}
+\tcbuselibrary{skins}
 
 % --------------------------------------------------
-% Professional Exam Header Box
+% Exam class customizations (for exam.cls)
 % --------------------------------------------------
-\newtcolorbox{examheaderbox}{
-    enhanced,
-    colback = white,
-    colframe = examblue,
-    boxrule = 2pt,
-    arc = 3mm,
-    drop shadow = {black!50!white},
-    left = 1em,
-    right = 1em,
-    top = 1em,
-    bottom = 1em,
-    fontupper = \sffamily
-}
-
-% --------------------------------------------------
-% Instructions Box - Professional Style
-% --------------------------------------------------
-\newtcolorbox{instructionsbox}{
-    enhanced,
-    colback = backgroundgray!30,
-    colframe = headerblue,
-    colbacktitle = headerblue,
-    coltitle = white,
-    title = {\sffamily\bfseries Instructions},
-    fonttitle = \sffamily\bfseries\large,
-    attach boxed title to top center = {yshift=-3mm},
-    boxed title style = {
-        enhanced,
-        size = small,
-        colframe = headerblue,
-        arc = 2mm
-    },
-    arc = 2mm,
-    boxrule = 1.5pt,
-    drop shadow = {black!20!white},
-    breakable,
-    left = 1em,
-    right = 1em,
-    top = 1.5em,
-    bottom = 1em,
-}
-
-% --------------------------------------------------
-% Section Header Box
-% --------------------------------------------------
-\newtcolorbox{sectionbox}[2]{
-    enhanced,
-    colback = primaryblue!10,
-    colframe = primaryblue!80!black,
-    colbacktitle = primaryblue!80!black,
-    coltitle = white,
-    title = {\sffamily\bfseries\large SECTION #1},
-    fonttitle = \sffamily\bfseries\large,
-    subtitle style = {
-        fontupper = \sffamily\itshape,
-        colback   = primaryblue!5
-    },
-    center title,
-    arc = 2mm,
-    boxrule = 1pt,
-    drop shadow = {black!20!white},
-    left = 1em,
-    right = 1em,
-    top = 0.8em,
-    bottom = 0.8em,
-    after title = {\\\normalsize\itshape #2}
-}
-
-% --------------------------------------------------
-% Question Paper Content Box
-% --------------------------------------------------
-\newtcolorbox{questionbox}{
-    enhanced,
-    colframe = gray!40,
-    frame hidden,
-    boxrule = 1pt,
-    arc = 1mm,
-    left = 1em,
-    right = 1em,
-    top = 1em,
-    bottom = 1em,
-    breakable,
-    overlay = {
-        \draw[line width=1pt, gray!40, rounded corners=1mm]
-            (frame.north west) rectangle (frame.south east);
-    },
-    opacityback = 0,
-}
-
-% --------------------------------------------------
-% Grade Table Box
-% --------------------------------------------------
-\newtcolorbox{gradetablebox}{
-    enhanced,
-    colback = backgroundgray!20,
-    colframe = examblue,
-    boxrule = 1pt,
-    arc = 2mm,
-    left = 0.5em,
-    right = 0.5em,
-    top = 0.5em,
-    bottom = 0.5em,
-    center upper
-}
-
-% --------------------------------------------------
-% Exam class customisations (for exam.cls)
-% --------------------------------------------------
-% These assume the 'exam' class is being used.
-% They won't break other classes, but are meaningful there.
-
 % Professional question formatting
-\renewcommand{\questionlabel}{\sffamily\bfseries Q.\thequestion}
-\renewcommand{\partlabel}{\sffamily\bfseries(\thepartno)}
-\renewcommand{\subpartlabel}{\sffamily\bfseries\thesubpart.}
-
-% Enhanced point display
-\pointsdroppedatright
-\marksnotpoints
-\pointformat{\sffamily\bfseries[\themarginpoints]}
-\setlength{\rightpointsmargin}{2.5cm}
-
-% Professional section headers helper
-\newcommand{\sectionheader}[2]{%
-    \begin{sectionbox}{#1}{#2}\end{sectionbox}%
-    \vspace{1em}%
-}
+\@ifclassloaded{exam}{%
+    \renewcommand{\questionlabel}{\sffamily\bfseries Q.\thequestion}
+    \renewcommand{\partlabel}{\sffamily\bfseries(\thepartno)}
+    \renewcommand{\subpartlabel}{\sffamily\bfseries\thesubpart.}
+    
+    % Enhanced point display
+    \pointsdroppedatright
+    \marksnotpoints
+    \pointformat{\sffamily\bfseries[\themarginpoints]}
+    \setlength{\rightpointsmargin}{2.5cm}
+}{}
 
 % --------------------------------------------------
 % Notes:
-% - Watermark is intentionally NOT set here so each exam can choose
-%   its own \SetWatermarkText and whether to use draftwatermark at all.
-% - Headers/footers (lhead, chead, rhead, lfoot, cfoot, rfoot)
-%   are also left to the document preamble, as they vary by exam.
+% - Colors are defined in sagar-boxes.sty (loaded first)
+% - Watermark settings left to document preamble
+% - Headers/footers configured per-document
+% - tcolorbox environments for exams should be defined
+%   in sagar-exam-extended.sty to keep this core lean
 %
 % End of sagar-exam-core.sty
 % --------------------------------------------------
